--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,9 @@ PORT=3001
 MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/cyber-siege?retryWrites=true&w=majority
 
 # URL do Frontend (para CORS)
-# Em produção, muda para o URL real do frontend
-FRONTEND_URL=http://localhost:5173
+# Em produção (Vercel)
+FRONTEND_URL=https://cyber-siege.vercel.app
+
+# Para desenvolvimento local, descomenta:
+# FRONTEND_URL=http://localhost:5173
+
